--- a/login.html
+++ b/login.html
@@ -2,6 +2,6 @@
   Name:<input type="text">
   Password:<input type="password">
   <br>
-  <input type="submit">
+  <input type="submit" value= "Login">
   <input type="reset">
 </form>
